<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">STHLM Next</string>
    <string name="action_settings">Settings</string>
    <string name="title_nearest">Nearest</string>
    <string name="title_favorites">Favorites</string>
    <string name="button_map">Map</string>
    <string name="button_list">List</string>
    <string name="title_activity_test">Test</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_destination">DestinationActivity</string>
    <string name="title_activity_departure">Departure</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_favorite">Favorite</string>
    <string name="title_dialog_departure_notification">Create notification</string>
    <string name="button_departure_notification_cancel">Cancel</string>
    <string name="button_departure_notification_set">Set</string>
    <string name="text_departure_notification_message">Minutes before departure:</string>
    <string name="title_activity_about">About</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="action_about">About</string>
    <string name="disclaimer">DO NOT TRUST THIS APP!</string>
    <string name="disclaimer_title">DISCLAIMER</string>
    <string name="logo_desc">STHML Next logo</string>
    <string name="version_number">Version: xxx</string>
    <string name="api_credit">Uses information retrieved from trafiklab.se</string>
    <string name="action_bus">Show bus stops</string>

</resources>
