<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AboutActivity" >

    <ImageView 
        android:id="@+id/logo"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/logo_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/app_title"        
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        />
    <TextView
        android:id="@+id/version_number"        
        android:layout_below="@id/app_title"
        android:layout_centerHorizontal="true"        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version_number"
        />
    <TextView
        android:id="@+id/disclaimer_title"
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/version_number"
        android:text="@string/disclaimer_title" />

    <TextView 
        android:id="@+id/disclaimer"
        android:layout_below="@id/disclaimer_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disclaimer"
        />
    <TextView
        android:id="@+id/api_credit"
        android:layout_below="@id/disclaimer"
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/api_credit"
        />
    <TextView 
        android:id="@+id/authors"
        android:layout_below="@id/api_credit"
		android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
</RelativeLayout>